# Polaris_DE

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.sh
modules/launcher/: CMakeLists.txt
modules/launcher/qml/: AppLauncher.qml  main.qml
modules/launcher/qml/components/: AppLauncher.qml  SearchBar.qml
modules/launcher/src/: appmodel.cpp  appmodel.h  commandinterpreter.cpp  commandinterpreter.h  main.cpp
modules/osd/qml/: main.qml
modules/settings/: CMakeLists.txt
modules/settings/qml/: main.qml
modules/settings/qml/components/: AboutSettings.qml  BluetoothSettings.qml  ComingSoon.qml  DisplaySettings.qml  FirewallSettings.qml  PowerSettings.qml  SandboxSettings.qml  SharingSettings.qml  ShortcutsSettings.qml  SoundSettings.qml  UsbSettings.qml  WifiButton.qml  WifiSettings.qml
modules/settings/src/: main.cpp
modules/taskbar/: CMakeLists.txt
modules/taskbar/qml/: CalendarPopupWindow.qml  WifiPopupWindow.qml  main.qml
modules/taskbar/qml/components/: Battery.qml  CalendarView.qml  Clock.qml  DateDisplay.qml  WifiIndicator.qml  WifiPopup.qml  WorkspaceIndicator.qml
modules/taskbar/src/: battery.cpp  battery.h  calendar.cpp  calendar.h  clock.cpp  clock.h  main.cpp  wifi.cpp  wifi.h  workspace.cpp  workspace.h
modules/wallpaper/qml/: main.qml
modules/wifi_popup/: CMakeLists.txt
modules/wifi_popup/qml/: main.qml
modules/wifi_popup/qml/components/: WifiList.qml
modules/wifi_popup/src/: main.cpp
qml/: main.qml
shared/: CMakeLists.txt
shared/hardware/: hardwareInterface.cpp
shared/network/: wifi.cpp  wifi.h
src/: main.cpp
